# django-minipages

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  MANIFEST.in  NOTICE  README.md  README.rst  manage.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: README.md  README.rst  conf.py  getting-started.rst  index.rst  license.rst  requirements.txt
docs/references/: index.rst  models.rst  views.rst
docs/releases/: 0.1.0.rst  0.2.0.rst  index.rst
minipages/: apps.py  models.py  views.py
minipages/locale/en/LC_MESSAGES/: django.mo  django.po
minipages/migrations/: 0001_initial.py
minipages/templates/minipages/: page_detail.html  page_list.html
src/minipages/: __about__.py  __init__.py  admin.py  apps.py  models.py  urls.py  views.py
src/minipages/locale/en/LC_MESSAGES/: django.mo  django.po
src/minipages/locale/fr/LC_MESSAGES/: django.mo  django.po
src/minipages/migrations/: 0001_initial.py
tests/: settings.py  test_models.py  test_views.py  urls.py
